data/derived/comb/progs/unify/prog6667.ml.out
Characters 30-42:
  let fixpoint (f,b) = wwhile ( (helper f b),b);;
                                ^^^^^^^^^^^^
Error: This expression has type bool * 'a
       but an expression was expected of type 'b -> 'b * bool
